# focus-timeline-frontend

./: .gitattributes  .gitignore  AGENTS.md  PRODUCT.md  README.md  analysis_options.yaml  project.yml  pubspec.yaml
.agents/: red-team-reviewer.md  review-request-template.md
Docs/: BackendMvpSpec.md  ClassificationSupportPlan.md  ClientServerArchitecture.md  FlutterSetup.md  FrontendMigrationExecutionOrderV1.md  FrontendUiHandoff_bd9ba8f.md  InternalBetaGuide_2026-05-06.md  MVPRealHttpAcceptanceChecklist_2026-05-06.md  MVPRealHttpAcceptanceRun_2026-05-06.md  MVPReleaseCandidateChecklist_2026-05-07.md  Phase456ClosureChecklist.md  ProductSpec.md  ProductionSourceProviderStrategy.md  RealBackendIntegrationChecklist.md  SoloDogfoodingGuide_2026-05-06.md  TimelineGranularitySpec.md  TopicContextClassificationContractV1.md  TopicContextClassificationImplementationPlanV1.md  TopicSignalAIClassificationV1.md  UI_NEXT_AGENT.md
backend/: .env.example  README.md  pyproject.toml
backend/app/: __init__.py  api.py  config.py  database.py  main.py  models.py  schemas.py  services.py
lib/: app.dart  main.dart
test/: app_smoke_test.dart  auth_migration_test.dart  create_timeline_progress_test.dart  favorite_nodes_test.dart  followed_topic_migration_test.dart  guest_follow_policy_test.dart  initialization_error_handling_test.dart  profile_screen_test.dart  recommendations_batch_test.dart  remote_service_factory_test.dart  share_remote_migration_test.dart  shared_topic_flow_test.dart  source_article_service_test.dart  source_attribution_badges_test.dart  widget_test.dart  (+7 more)
(+391 files in other folders)
